[metadata]
name = api
description = api server

[options]
packages = 
    api
install_requires = 
    flask==2.2.5
python_requires =  >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
api = py.typed

[flake8]
max-line-length = 160
